# learn-fastapi

./: Dockerfile  Makefile  dev.db  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1e1dc4b7ffce_init_db.py  a72088d77b56_init_db.py
app/: celery_app.py  database.py  main.py  schema.py  settings.py
app/core/: settings.py
app/models/: database.py
app/routes/: auth_routes.py  post_routes.py  products.py  user_routes.py
app/schema/: auth.py  user.py  users.py
app/services/: auth_service.py  post_service.py  user_service.py
app/templates/: index.html
app/utils/: generate_id.py
